--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         </div>
         <div class="table-responsive overflow-hidden d-none text-center">
           <table id="myTable" width="100%" class="display table table-bordered table-hover text-nowrap">
+            <caption>CAPTION</caption>
           </table>
         </div>
       </div>
